<resources>
    <string name="app_name">LPM App</string>
    <string name="getUSBbutton">Check USB</string>
    <string name="connectToUsb">Establish connection</string>
    <string name="refresh">Refresh</string>
    <string name="autorefreshon">Autorefresh On</string>
    <string name="autorefreshoff">Autorefresh Off</string>
    <string name="stop">Stop</string>
    <string name="thermFlag">THERMTRIP#</string>
    <string name="su3Flag">SU3</string>
    <string name="su5Flag">SU 5</string>
    <string name="voltages">Voltages:</string>
    <string name="temps">Temperatures:</string>
    <string name="minorV">Minor Voltages:</string>
    <string name="crit_error">no USB connected</string>
    <string name="retry_button">Retry</string>
    <string name="log_off_button">Log Off</string>
    <string name="log_on_button">Log On</string>
    <string name="notenoughmemorytext">Not enough memory</string>
    <string name="permissiongranted">Permission granted</string>
    <string name="permissiondenied">Permission denied</string>
    <string name="onpmdetected">Linkos Power Monitor Detected</string>
    <string name="onuddetected">Unknown device detected</string>
    <string name="log">Log</string>
    <string name="autorefresh">Autorefresh</string>
    <string name="sus3">Suspend 3</string>
    <string name="sus5">Suspend 5</string>
</resources>
