<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="361dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.315">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/temps"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/terminus"
                android:paddingLeft="20dp"
                android:text="@string/temps"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:typeface="normal"
                tools:text="@string/temps" />

            <TextView
                android:id="@+id/textView0"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/terminus"
                android:paddingLeft="20dp"
                android:text="TextView"
                android:textStyle="bold"
                android:typeface="normal" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/terminus"
                android:paddingLeft="20dp"
                android:text="TextView"
                android:textStyle="normal"
                android:typeface="normal" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/terminus"
                android:paddingLeft="20dp"
                android:text="TextView"
                android:textStyle="bold"
                android:typeface="normal" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/terminus"
                android:paddingLeft="20dp"
                android:text="TextView"
                android:textStyle="bold"
                android:typeface="normal" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/terminus"
                android:paddingLeft="20dp"
                android:text="TextView"
                android:textStyle="bold"
                android:typeface="normal" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/terminus"
                android:paddingLeft="20dp"
                android:text="@string/voltages"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:typeface="normal" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/terminus"
                android:paddingLeft="20dp"
                android:text="TextView"
                android:textStyle="bold"
                android:typeface="normal" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/terminus"
                android:paddingLeft="20dp"
                android:text="TextView"
                android:textStyle="bold"
                android:typeface="normal" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/terminus"
                android:paddingLeft="20dp"
                android:text="TextView"
                android:textStyle="bold"
                android:typeface="normal" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/terminus"
                android:paddingLeft="20dp"
                android:text="TextView"
                android:textStyle="bold"
                android:typeface="normal" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/terminus"
                android:paddingLeft="20dp"
                android:text="TextView"
                android:textStyle="bold"
                android:typeface="normal" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/terminus"
                android:paddingLeft="20dp"
                android:text="TextView"
                android:textStyle="bold"
                android:typeface="normal" />

            <TextView
                android:id="@+id/minorVoltages"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/terminus"
                android:paddingLeft="20dp"
                android:text="@string/minorV"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:typeface="normal"
                tools:text="@string/minorV" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/terminus"
                android:paddingLeft="20dp"
                android:text="TextView"
                android:textStyle="bold"
                android:typeface="normal" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/terminus"
                android:paddingLeft="20dp"
                android:text="TextView"
                android:textStyle="bold"
                android:typeface="normal" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/terminus"
                android:paddingLeft="20dp"
                android:text="TextView"
                android:textStyle="bold"
                android:typeface="normal" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/terminus"
                android:paddingLeft="20dp"
                android:text="TextView"
                android:textStyle="bold"
                android:typeface="normal" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/refreshButtonShower"
        android:layout_width="115dp"
        android:layout_height="70dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:autoSizeTextType="uniform"
        android:background="@color/colorAccent"
        android:fontFamily="@font/terminus"
        android:maxLines="1"
        android:onClick="refresher"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/refresh"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/autorefreshbutton"
        android:layout_width="115dp"
        android:layout_height="70dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="8dp"
        android:autoSizeTextType="uniform"
        android:background="@color/colorAccent"
        android:fontFamily="@font/terminus"
        android:maxLines="1"
        android:onClick="autorefresher"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/autorefresh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/toggleButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="115dp"
        android:layout_height="70dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:autoSizeTextType="uniform"
        android:background="@color/colorAccent"
        android:checked="false"
        android:fontFamily="@font/terminus"
        android:maxLines="1"
        android:onClick="getoffon"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textOff="@string/log"
        android:textOn="@string/log"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/logstatus"
        android:layout_width="115dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="TextView"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/terminus"
        android:autoSizeTextType="uniform"
        app:layout_constraintTop_toTopOf="parent"
        android:maxLines="1"
        app:layout_constraintVertical_bias="0.882" />

    <TextView
        android:id="@+id/autostatus"
        android:layout_width="115dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/terminus"
        android:maxLines="1"
        android:text="TextView"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.869" />

    <TextView
        android:id="@+id/sus3text"
        android:layout_width="115dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="8dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/terminus"
        android:text="@string/sus3"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.015" />

    <TextView
        android:id="@+id/sus5text"
        android:layout_width="115dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="8dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/terminus"
        android:text="@string/sus5"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.015" />

    <TextView
        android:id="@+id/thrmtrp"
        android:layout_width="115dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="8dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/terminus"
        android:text="@string/thermFlag"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/toggleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.015" />

</android.support.constraint.ConstraintLayout>